fix gap about story

--- a/css/media.css
+++ b/css/media.css
@@ -69,3 +69,17 @@
 	}
   }
   
+  @media (max-width: 600px) {
+	.youtube-media {
+	  width: 100%;
+	}
+  }
+
+  @media only screen and (min-width: 992px) and (max-width: 1410px) {
+
+	.gap-about{
+		display: none;
+	}
+
+}
+ 
